fix: delete scrollbar

--- a/app/assets/pcss/main.pcss
+++ b/app/assets/pcss/main.pcss
@@ -2,6 +2,18 @@
   font-family: "Nunito", sans-serif;
 }
 
+html {
+  scrollbar-width: none;
+}
+
+body {
+  -ms-overflow-style: none;
+}
+
+  ::-webkit-scrollbar {
+  display: none;
+}
+
 .mvmc-logo {
   @apply text-4xl space-x-4;
 }
